--- a/Zadatak/css/style.css
+++ b/Zadatak/css/style.css
@@ -29,7 +29,7 @@ body {
     float: right;
 }
 
-.media-nav ul li{
+.media-nav ul li {
     display: inline-block;
     padding-left: 5px;
     padding-right: 10px;
@@ -41,12 +41,10 @@ body {
 }
 
 
-
-
 /*Logo*/
 
 .logo {
-    
+
     width: 200px;
     height: 100px;
     border: 1px solid black;
@@ -59,10 +57,6 @@ body {
 
 .logo p {
     font-weight: bolder;
-    /*display: inline-block;*/
-    /*margin: 0 auto;*/
-    /*position: relative;*/
-    /*top: 50%;*/
     transform: translateY(150%);
 
 }
@@ -106,7 +100,7 @@ body {
 .nav-list ul {
     list-style-type: none;
     float: right;
-    
+
 }
 
 .nav-list ul li {
@@ -133,8 +127,6 @@ body {
 }
 
 
-
-
 /*Emergency Announcement*/
 
 
@@ -153,7 +145,7 @@ body {
     padding: 10px 0;
     transform: translateY(-10%);
     font-weight: bolder;
-    
+
 }
 
 .x {
@@ -164,7 +156,7 @@ body {
     border: 1px solid #454545;
     transform: translateY(-120%);
     margin-right: 15px;
-    
+
 }
 
 .line1 {
@@ -172,9 +164,7 @@ body {
     height: 11px;
     border-bottom: 1px solid #454545;
     transform:
-        translateY(0px)
-        translateX(0px)
-        rotate(45deg); 
+        translateY(0px) translateX(0px) rotate(45deg);
     position: absolute;
 }
 
@@ -185,22 +175,13 @@ body {
     height: 11px;
     border-bottom: 1px solid #454545;
     transform:
-        translateY(0px)
-        translateX(0px)
-        rotate(-45deg);
+        translateY(0px) translateX(0px) rotate(-45deg);
     margin-left: -8px;
     margin-top: 0px;
-  
-    
 }
-    
-
-
 
 
 /*Callout area*/
-
-
 
 .box {
     float: left;
@@ -208,10 +189,10 @@ body {
     padding: 50px;
     background-color: #dedede;
     text-align: center;
-    margin: 10px 0px;
+    margin: 15px 0 0 0;
     height: 300px;
     border: 1px solid black;
-    
+
 }
 
 
@@ -221,6 +202,6 @@ body {
     display: table;
 }
 
-
-
-
+.callout p {
+    transform: translateY(190%);
+}
