--- a/Zadatak/css/style.css
+++ b/Zadatak/css/style.css
@@ -1,207 +1,206 @@
-* {
-    box-sizing: border-box;
-}
-
-
 body {
-    margin-top: 0;
+    margin: 0 auto;
+    max-width: 1200px;
+    height: 100%;
+    font-family: "Montserrat";
+    font-weight: bold;
 }
 
-.container {
-    max-width: 100%;
-}
+/* Media bar */
 
-.media {
-    max-width: 100%;
-    border: 1px solid black;
-    height: 40px;
-}
 
 .media-nav {
-    border: 1px solid black;
-    display: inline-block;
-    width: 100%;
+    display: flex;
+    justify-content: flex-end;
     background-color: #dedede;
+    border: 1px solid #000;
 }
 
 .media-nav ul {
     list-style-type: none;
-    float: right;
+
 }
 
 .media-nav ul li {
+    padding: 0 10px;
     display: inline-block;
-    padding-left: 5px;
-    padding-right: 10px;
 }
 
-.media-nav ul li:first-child {
-    border-right: 1px solid black;
-    padding-right: 10px;
+.media-nav ul li:last-child {
+    border-left: 1px solid black;
 }
 
 
-/*Logo*/
+/* Navigation */
+
+
+.navigation {
+    display: flex;
+    margin-bottom: 10px;
+}
+
 
 .logo {
-
-    width: 200px;
-    height: 100px;
+    display: flex;
+    width: 180px;
+    height: 110px;
     border: 1px solid black;
-    margin-top: 10px;
-    margin-left: 30px;
+    align-items: center;
+    justify-content: center;
+    margin: 15px 0 0px 25px;
     background-color: #dedede;
-    float: left;
-    text-align: center;
 }
 
-.logo p {
-    font-weight: bolder;
-    transform: translateY(150%);
-
+.logo > p {
+    font-size: 23px;
 }
 
 
+/* Head navigation */
+
+.head-section {
+    width: 900px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    justify-content: flex-end;
+    margin-left: auto;
+
+}
 
 
-/*Contact form*/
+/* Contact buttons*/
+
+.contact {
+
+    align-self: flex-end;
+}
+
 
 .contact ul {
-    float: right;
     list-style-type: none;
+
 }
 
 .contact ul li {
     display: inline-block;
-    border: 1px solid black;
-    background-color: #dedede;
+    border: 1px solid #000;
+}
+
+.contact ul li:first-child {
+    margin-right: 13px;
     padding: 10px 120px;
-    margin-left: 20px
+    background-color: #dedede;
 }
 
 .contact ul li:last-child {
-    padding: 10px 40px;
+    padding: 10px 30px;
+    background-color: #dedede;
 }
 
 
 
 
-/*Navigation*/
 
-.navigation {
-    width: 100%;
-}
+/* Navigation list*/
+
 
 .nav-list {
-    display: block;
-    float: right;
+    align-self: flex-end;
 }
 
 .nav-list ul {
     list-style-type: none;
-    float: right;
-
 }
 
 .nav-list ul li {
+    padding: 0 15px;
     display: inline-block;
-    padding: 0 20px;
 }
 
-
-
-/*Header image*/
 
 .head-img {
-    width: 100%;
-    height: 300px;
-    border: 1px solid black;
-    float: left;
-    text-align: center;
+    display: flex;
     background-color: #dedede;
-    margin-top: 5px;
+    height: 400px;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+    border: 1px solid #000;
 }
-
-.head-img p {
-    transform: translateY(300%);
-}
-
-
-/*Emergency Announcement*/
 
 
 .announcement {
-    border: 1px solid black;
+    display: flex;
     background-color: #dedede;
-    float: left;
-    width: 100%;
-    height: 60px;
-    margin-top: 15px;
-}
-
-.announcement p {
-    margin-bottom: -10px;
-    margin-left: 10px;
-    padding: 10px 0;
-    transform: translateY(-10%);
-    font-weight: bolder;
-
+    margin: 15px 0;
+    padding-left: 10px;
+    height: 70px;
+    align-items: center;
+    justify-content: flex-start;
+    border: 1px solid #000;
 }
 
 .x {
-    float: right;
     background-color: #dedede;
     width: 20px;
     height: 20px;
-    border: 1px solid #454545;
-    transform: translateY(-120%);
-    margin-right: 15px;
+    border: 1px solid #000;;
+    display: flex;
+    margin-left: auto;
+    margin-right: 20px;
 
 }
 
 .line1 {
-    width: 26px;
+    width: 27px;
     height: 11px;
-    border-bottom: 1px solid #454545;
+    border-bottom: 1px solid #000;
     transform:
-        translateY(0px) translateX(0px) rotate(45deg);
+        translateY(0px) 
+        translateX(0px) 
+        rotate(46deg);
+
     position: absolute;
 }
 
 
 
 .line2 {
-    width: 26px;
+    width: 27px;
     height: 11px;
-    border-bottom: 1px solid #454545;
+    border-bottom: 1px solid #000;
     transform:
-        translateY(0px) translateX(0px) rotate(-45deg);
+        translateY(0px) 
+        translateX(0px) 
+        rotate(-47deg);
+
     margin-left: -8px;
     margin-top: 0px;
 }
 
 
-/*Callout area*/
+.callout {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    
 
-.box {
-    float: left;
-    width: 33.33%;
-    padding: 50px;
+}
+
+.callout > div {
+    padding: 20px;
+    flex-direction: row;
+    flex-flow: row;
+    padding: 126px;
     background-color: #dedede;
+    border: 1px solid #000;
+}
+
+.callout > div > p {
     text-align: center;
-    margin: 15px 0 0 0;
-    height: 300px;
-    border: 1px solid black;
-
 }
 
 
-.callout::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-.callout p {
-    transform: translateY(190%);
-}
